test/compiler_errors/include-has-extra-attrs.lzx
<!--- extra attribute; should signal compilation warning -->
<canvas>
  <include href="a.lzx" extra="true"/>
</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
